# alma-api-client

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json
src/alma_api_client/: __init__.py  alma_analytics_client.py  alma_api_client.py  alma_marc.py
src/alma_api_client/clients/: alma_api_client.py
src/alma_api_client/models/: api.py  marc_records.py  sets.py
tests/: test_apiresponse.py  test_marc_records.py
tests/data/: bib_record.mrc  bib_record.xml  marc_response.pickle
