[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "alma_api_client"
version = "0.0.1"
description = "Python client for the Alma API"
readme = "README.md"
requires-python = ">=3.9"
classifiers = ["Programming Language :: Python :: 3"]
dependencies = ["xmltodict", "requests", "pymarc"]

[project.urls]
Homepage = "https://github.com/UCLALibrary/alma-api-client"
