[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "alma_api_client"
version = "0.0.2"
description = "Python client for the Alma API"
readme = "README.md"
requires-python = ">=3.9"
classifiers = ["Programming Language :: Python :: 3"]
dependencies = [
    "pymarc==5.3.1",
    "requests==2.32.4",
    "xmltodict==0.14.2",
]

[project.urls]
Homepage = "https://github.com/UCLALibrary/alma-api-client"
