[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "alma_api_client"
version = "0.2.0"
description = "Python client for the Alma API"
readme = "README.md"
requires-python = ">=3.11"
classifiers = ["Programming Language :: Python :: 3"]
dependencies = [
    "pymarc==5.3.1",
    "requests==2.32.4",
    "xmltodict==0.14.2",
    "typing_extensions==4.15.0",
]

[project.urls]
Homepage = "https://github.com/UCLALibrary/alma-api-client"
